@startuml Domain Model
title Domain Model
object Tinder
object Match
object Like
object Dismiss
object Swipe
object Candidate
object User
note right
User is represented by Profile
end note
object Profile
object Name
object Conversation

User ..> Swipe : "Like profile?"
User *--> Profile

Tinder *--> "2..n" User
Profile *--> Name

Like -up-|> Swipe
Dismiss -up-|> Swipe
User o-down-> "0..n" Candidate: "Filter"

Profile ..> Candidate
Conversation --> Match: "With profile"

Swipe --> Profile
Match *--> "2" Profile
Match <--> "2" Like

User --> Conversation: "Maintains"

@enduml

@startuml Domain Model v2
  title Domain Model
  object Tinder
  object User
  object Profile
  object Candidate
  object Swipe
  object Right
  object Left
  object Match
  object Conversation

  Tinder *--> "2..n" User
  User *--> Profile
  User ..> Swipe
  Swipe --> Profile: from & to
  Right -up-|> Swipe
  Left -up-|> Swipe
  Match *--> "2" Right
  
  User --> Conversation: "Mantains"
  Conversation --> Match
@enduml

@startuml Tinder Domain
  title Tinder Domain
  class User {
    + profile: Profile
    + swipes(profile: Profile, direction: SwipeDirection): void
  }
  class Profile {
    - swipes: Swipe[]
    + getName(): string
    + update(todo): void
    + addSwipe(swipe: Swipe): void
    + likes(profile): boolean
  }
  class Swipe {
    - owner: Profile
    - candidate: Profile
    + isRight(): boolean
    + isMatch(): boolean
    + isCandidateEquals(profile: Profile): boolean
  }
  class Match {
    - profiles: Profile[]
    + setProfiles(profiles: Profile[])
  }
  class Conversation {}

  User *--> Profile
  User ..> Swipe
  Profile o--> Swipe
  Profile o--> Match
  Match *--> "2" Swipe
  note on link
    [with right direction]
  endnote
@enduml

